--- a/src/main/webapp/contracts/de/template.xhtml
+++ b/src/main/webapp/contracts/de/template.xhtml
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
@@ -9,7 +10,8 @@
     <h:outputStylesheet name="/screen.css" />
 </h:head>
 
-<h:body>
+<h:body id="template">
+
     <div id="container">
 
         <div id="header">
