--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Refresh" content="0; URL=index.jsf">
+    <meta http-equiv="Refresh" content="0; URL=listCampaigns.jsf">
 </head>
 </html>
