--- a/src/main/webapp/contracts/de/template.xhtml
+++ b/src/main/webapp/contracts/de/template.xhtml
@@ -12,6 +12,8 @@
 
 <h:body id="template">
 
+    <h:outputLink value="#{request.contextPath}/">#{request.contextPath}/</h:outputLink>
+
     <div id="container">
 
         <div id="header">
