--- a/src/main/webapp/contracts/en/template.xhtml
+++ b/src/main/webapp/contracts/en/template.xhtml
@@ -10,6 +10,9 @@
 </h:head>
 
 <h:body>
+
+    <h:outputLink value="#{request.contextPath}/">#{request.contextPath}/</h:outputLink>
+
     <div id="container">
 
         <div id="header">
