--- a/src/main/webapp/listCampaigns.xhtml
+++ b/src/main/webapp/listCampaigns.xhtml
@@ -3,7 +3,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-<body>
+<body id="listCampaigns">
 
     <f:view contracts="#{view.locale.language}">
 
