--- a/src/main/webapp/contracts/en/template.xhtml
+++ b/src/main/webapp/contracts/en/template.xhtml
@@ -11,8 +11,6 @@
 
 <h:body>
 
-    <h:outputLink value="#{request.contextPath}/">#{request.contextPath}/</h:outputLink>
-
     <div id="container">
 
         <div id="header">
@@ -26,7 +24,7 @@
         </div>
 
         <div id="footer">
-            <p> (CC) footer</p>
+            <p> <h:outputLink value="#{request.contextPath}/">(CC) footer</h:outputLink></p>
         </div>
 
     </div>
