--- a/src/main/webapp/listCampaigns.xhtml
+++ b/src/main/webapp/listCampaigns.xhtml
@@ -1,10 +1,10 @@
-
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+   xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-<body id="listCampaigns">
+<body>
 
     <f:view contracts="#{view.locale.language}">
 
@@ -16,51 +16,62 @@
 
                 <h:form>
 
-                    <h:dataTable value="#{campaignListProducer.campaigns}" var="campaign">
+                    <p:dataTable value="#{campaignListProducer.campaigns}" var="campaign">
 
-                        <h:column>
-                            <h:commandLink value="x" actionListener="#{listCampaignsController.doDeleteCampaign(campaign)}" />
-                        </h:column>
+                        <p:column>
+                            <p:commandButton onclick="PF('confirmation').show()" actionListener="#{listCampaignsController.doDeleteCampaign(campaign)}" icon="ui-icon-close" />
+                        </p:column>
 
-                        <h:column>
-                            <f:facet name="header">#{msg['listCampaigns.name']}</f:facet>
+                        <p:column>
+                            <f:facet name="header">
+                                #{msg['listCampaigns.name']}
+                            </f:facet>
                             <h:outputText value="#{campaign.name}" />
-                        </h:column>
+                        </p:column>
 
-                        <h:column>
-                            <f:facet name="header">#{msg['listCampaigns.target_amount']}</f:facet>
+                        <p:column>
+                            <f:facet name="header">
+                                #{msg['listCampaigns.target_amount']}
+                            </f:facet>
                             <h:outputText value="#{campaign.targetAmount}">
                                 <f:convertNumber type="currency" currencyCode="EUR" />
                             </h:outputText>
-                        </h:column>
+                        </p:column>
 
-                        <h:column>
-                            <f:facet name="header">#{msg['listCampaigns.donated_so_far']}</f:facet>
+                        <p:column>
+                            <f:facet name="header">
+                                #{msg['listCampaigns.donated_so_far']}
+                            </f:facet>
                             <h:outputText value="#{campaign.amountDonatedSoFar}">
                                 <f:convertNumber type="currency" currencyCode="EUR" />
                             </h:outputText>
-                        </h:column>
+                        </p:column>
 
-                        <h:column>
-                            <h:commandLink value="#{msg['listCampaigns.edit']}" action="#{listCampaignsController.doEditCampaign(campaign)}" />
-                        </h:column>
+                        <p:column>
+                            <p:commandLink value="#{msg['listCampaigns.edit']}" ajax="false" action="#{listCampaignsController.doEditCampaign(campaign)}" />
+                        </p:column>
 
-                        <h:column>
-                            <h:commandLink value="#{msg['listCampaigns.list_donations']}" action="#{listCampaignsController.doListDonations(campaign)}" />
-                        </h:column>
+                        <p:column>
+                            <p:commandLink value="#{msg['listCampaigns.list_donations']}" ajax="false" action="#{listCampaignsController.doListDonations(campaign)}" />
+                        </p:column>
 
-                        <h:column>
-                            <h:commandLink value="#{msg['listCampaigns.form']}" action="#{listCampaignsController.doEditDonationForm(campaign)}" />
-                        </h:column>
+                        <p:column>
+                            <p:commandLink value="#{msg['listCampaigns.form']}" ajax="false" action="#{listCampaignsController.doEditDonationForm(campaign)}" />
+                        </p:column>
+                    </p:dataTable>
 
-                    </h:dataTable>
+                    <p:commandButton value="#{msg['listCampaigns.add_campaign']}" ajax="false" action="#{listCampaignsController.doAddCampaign}" />
 
-                    <h:commandButton value="#{msg['listCampaigns.add_campaign']}" action="#{listCampaignsController.doAddCampaign}" />
+                    <p:confirmDialog message="#{msg['listCampaigns.ask_delete_campaign']}" header="#{msg['listCampaigns.delete_campaign']}" severity="alert" widgetVar="confirmation">
+                        <p:commandButton value="#{msg['listCampaigns.yes']}" oncomplete="PF('confirmation').hide()" ajax="false" actionListener="#{listCampaignsController.commitDeleteCampaign}" />
+                        <p:commandButton value="#{msg['listCampaigns.no']}" onclick="PF('confirmation').hide()" />
+                    </p:confirmDialog>
 
                 </h:form>
             </ui:define>
         </ui:composition>
     </f:view>
+
 </body>
 
 </html>
